--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 ### Linux ###
 *~
 
+balance.csv
+
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
